--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
 
     </section>
-    <p>"Terima kasih atas kepercayaan Anda membeli cilok pedas dari kami. Semoga cocok di lidah dan puas di hati. Kami tunggu order selanjutnya ya! 😊</p>
+    <p class="paragraf">"Terima kasih atas kepercayaan Anda membeli cilok pedas dari kami. Semoga cocok di lidah dan puas di hati. Kami tunggu order selanjutnya ya! 😊</p>
     
     <!-- contac end -->
 
