--- a/index.html
+++ b/index.html
@@ -80,24 +80,28 @@
           <img src="./img/menu/8e2a72ba20bbb4e517b43ddfd2b7c91b.jpg"  alt="menu1">
           <h3 class="menu-card-title">Cilok Sambal kacang-</h3>
           <p class="menu-card-price">IDR 10k</p>
+          <a href="#" class="order-now-btn">Order Now</a>
         </div>
 
         <div class="menu-card">
           <img src="./img/menu/Gambar WhatsApp 2025-06-11 pukul 22.35.10_af7dd8d7.jpg"  alt="menu2">
           <h3 class="menu-card-title">Cilok Keju-</h3>
           <p class="menu-card-price">IDR 15k</p>
+          <a href="#" class="order-now-btn">Order Now</a>
         </div>
 
         <div class="menu-card">
           <img src="./img/menu/Gambar WhatsApp 2025-06-15 pukul 07.13.45_c16d8e2c.jpg"  alt="menu3">
           <h3 class="menu-card-title">Cilok Isi Ayam-</h3>
           <p class="menu-card-price">IDR 13k</p>
+          <a href="#" class="order-now-btn">Order Now</a>
         </div>
 
         <div class="menu-card">
           <img src="./img/menu/cilok isi telor.jpg"  alt="menu4">
           <h3 class="menu-card-title">Cilok Isi Telor-</h3>
           <p class="menu-card-price">IDR 13k</p>
+          <a href="#" class="order-now-btn">Order Now</a>
         </div>
         
       </div>
